# h02_to_mqtt

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
tests/: test_main.py
