[project]
name = "h02-to-mqtt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.3",
    "fastapi[standard]>=0.115.4",
    "orjson>=3.10.10",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.9.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
